# gatekeeper_grpc

./: .gitignore  Makefile  gatekeeper.proto  pyproject.toml
gatekeeper_grpc/: __main__.py  config.py  gatekeeper_pb2.py  gatekeeper_pb2_grpc.py  services.py
gatekeeper_grpc/whiteboard/: __init__.py
tests/: test_gatekeeper_grpc.py  test_services.py
